==> atalegao/F.L.O.W.-Senior-Design/Screen/screen_test2/Core/Adafruit_RA8875/Adafruit_RA8875.cpp <==
#include <Adafruit_RA8875.hpp>
#include "stdio.h"
#include "string.h"
#include "stdbool.h"

void Adafruit_RA8875::writeCommand(uint8_t d) {
	HAL_StatusTypeDef halStatus = HAL_OK;

	while (!HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
		HAL_Delay(1);
	}

	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_ENABLE);

	uint8_t pData;

	pData = RA8875_CMDWRITE;

	halStatus = HAL_SPI_Transmit(spiHandle, &pData, sizeof(pData), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

	while (!HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
		HAL_Delay(1);
	}

	pData = d;
	halStatus = HAL_SPI_Receive(spiHandle, &pData, sizeof(uint8_t), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_DISABLE);
}

uint8_t Adafruit_RA8875::readData(void) {
	HAL_StatusTypeDef halStatus = HAL_OK;

	while (!HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
		HAL_Delay(1);
	}

	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_ENABLE);

	uint8_t pData[1];
	pData[0] = RA8875_DATAREAD;
	halStatus = HAL_SPI_Transmit(spiHandle, &pData[0], sizeof(pData), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

	while (!HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
		HAL_Delay(1);
	}

	uint8_t retVal = 0x00;
	halStatus = HAL_SPI_Receive(spiHandle, &retVal, sizeof(uint8_t), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_DISABLE);

	return retVal;
}

void Adafruit_RA8875::writeData(uint8_t d) {
	HAL_StatusTypeDef halStatus = HAL_OK;

	while (!HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
		HAL_Delay(1);
	}

	uint8_t pData = RA8875_DATAWRITE;
	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_ENABLE);

	halStatus = HAL_SPI_Transmit(spiHandle, &pData, sizeof(uint8_t), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

	while (!HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
		HAL_Delay(1);
	}

	pData = d;
	halStatus = HAL_SPI_Transmit(spiHandle, &pData, sizeof(uint8_t), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_DISABLE);
}

bool Adafruit_RA8875::begin(enum RA8875sizes s) {
	_size = s;

	if (_size == RA8875_480x80) {
		_width = 480;
		_height = 80;
	} else if (_size == RA8875_480x128) {
		_width = 480;
		_height = 128;
	} else if (_size == RA8875_480x272) {
		_width = 480;
		_height = 272;
	} else if (_size == RA8875_800x480) {
		_width = 800;
		_height = 480;
	} else {
		return false;
	}

	_rotation = 0;

	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_ENABLE);
	HAL_Delay(100);
	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_DISABLE);
	HAL_Delay(100);

	HAL_GPIO_WritePin(LCD_RESET_GPIO_Port, LCD_RESET_Pin, GPIO_PIN_RESET);
	HAL_Delay(100);
	HAL_GPIO_WritePin(LCD_RESET_GPIO_Port, LCD_RESET_Pin, GPIO_PIN_SET);

	uint8_t x = readReg(0); //should be 0
	//    Serial.print("x = 0x"); Serial.println(x,HEX);
	if (x != 0x75) {
		printf("x=0x%2x\r\n", x);
		return false;
	}

	initialize();

	return true;
}

void Adafruit_RA8875::drawPixel(int16_t x, int16_t y, uint16_t color) {
	x = applyRotationX(x);
	y = applyRotationY(y);

	writeReg(RA8875_CURH0, x);
	writeReg(RA8875_CURH1, x >> 8);
	writeReg(RA8875_CURV0, y);
	writeReg(RA8875_CURV1, y >> 8);

	writeCommand(RA8875_MRWC);

	HAL_StatusTypeDef halStatus = HAL_OK;

	uint8_t pData = RA8875_DATAWRITE;
	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_ENABLE);

	halStatus = HAL_SPI_Transmit(spiHandle, &pData, sizeof(uint8_t), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

	while (!HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
		HAL_Delay(1);
	}

	pData = color >> 8;
	halStatus = HAL_SPI_Transmit(spiHandle, &pData, sizeof(uint8_t), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

	while (!HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
		HAL_Delay(1);
	}

	pData = color;
	halStatus = HAL_SPI_Transmit(spiHandle, &pData, sizeof(uint8_t), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_DISABLE);
}

void Adafruit_RA8875::drawPixels(uint16_t *p, uint32_t num, int16_t x, int16_t y) {
	x = applyRotationX(x);
	y = applyRotationY(y);

	writeReg(RA8875_CURH0, x);
	writeReg(RA8875_CURH1, x >> 8);
	writeReg(RA8875_CURV0, y);
	writeReg(RA8875_CURV1, y >> 8);

	uint8_t dir = RA8875_MWCR0_LRTD;
	if (_rotation == 2) {
	dir = RA8875_MWCR0_RLTD;
	}
	writeReg(RA8875_MWCR0, (readReg(RA8875_MWCR0) & ~RA8875_MWCR0_DIRMASK) | dir);

	writeCommand(RA8875_MRWC);

	HAL_StatusTypeDef halStatus = HAL_OK;

	while (!HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
		HAL_Delay(1);
	}

	uint8_t pData = RA8875_DATAWRITE;
	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_ENABLE);

	halStatus = HAL_SPI_Transmit(spiHandle, &pData, sizeof(uint8_t), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

	while (num--) {
		while (!HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
			HAL_Delay(1);
		}

		pData = *p++;
		halStatus = HAL_SPI_Transmit(spiHandle, &pData, sizeof(uint8_t), 100);

		if (halStatus != HAL_OK) {
			Error_Handler();
		}
	}

	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_DISABLE);
}

uint8_t Adafruit_RA8875::readStatus(void) {
	HAL_StatusTypeDef halStatus = HAL_OK;

	while (HAL_GPIO_ReadPin(LCD_WAIT_GPIO_Port, LCD_WAIT_Pin)) {
		HAL_Delay(1);
	}

	HAL_GPIO_WritePin(RA8875_CS_GPIO_Port, RA8875_CS_Pin, CS_ENABLE);

	uint8_t pData = RA8875_CMDREAD;

	halStatus = HAL_SPI_Transmit(spiHandle, &pData, sizeof(uint8_t), 100);

	if (halStatus != HAL_OK) {
		Error_Handler();
	}

  return pData;
}
